Class comments ++ : consistency explanations